crates/compiler/mir/tests/snapshots/mdtest_snapshots__mdtest_mir_snapshots@01-if-else@ifelse_statements_in_cairom__ifelse.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: If-Else Statements in Cairo-M - If-Else"
input_file: mdtest/02-control-flow/01-if-else.md
---
Test: If-Else Statements in Cairo-M - If-Else
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/02-control-flow/01-if-else.md
============================================================
Source:
fn choose(selector: felt) -> felt {
    if selector == 0 {
        return 10;
    } else {
        return 20;
    }
}
============================================================
Generated MIR:
module {
  // Function 0
  fn choose {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 10

    2:
      return 20

  }

}
